--- a/.env
+++ b/.env
@@ -26,13 +26,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=mail.thoor.com.br
+MAIL_PORT=465
+MAIL_USERNAME=noreply@thoor.com.br
+MAIL_PASSWORD=Dani@93116570
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=noreply@thoor.com.br
+MAIL_FROM_NAME="Novo Ar"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
