--- a/.env
+++ b/.env
@@ -26,12 +26,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.elasticemail.com
-MAIL_PORT=2525
+MAIL_HOST=br960.hostgator.com.br
+MAIL_PORT=465
 MAIL_USERNAME=noreply@thoor.com.br
-MAIL_PASSWORD="DB26089B7841A6A370956A73E4E81D5D7723"
+MAIL_PASSWORD='Dani#93116570'
+MAIL_ENCRYPTION = ssl
 MAIL_FROM_ADDRESS=noreply@thoor.com.br
 MAIL_FROM_NAME="Novo Ar"
+
 
 
 AWS_ACCESS_KEY_ID=
